# hermit

./: .gitignore  CMakeLists.txt  Info.plist.in  README.md  entitlements.plist  main.cpp  meshmodrendertests.cpp  meshmodrendertests.hpp  pullinstanced.cpp  pullinstanced.hpp  synthwaveviztests.c  synthwaveviztests.h  synthwavvizetests.cpp  visualdebugtests.cpp
.github/workflows/: nightly.yml  push_build.yml
alife/: accel_cuda.cu  accel_cuda.hpp  accel_sycl.cpp  accel_sycl.hpp  alifetests.cpp  alifetests.hpp  core_sycl.cpp  cudacore.cu  cudacore.hpp  world2d.cpp  world2d.hpp
out_bin/resources/alife/: world2dmoe_vertex.hlsl
out_bin/shaders/alife/: world2dmoe_vertex.hlsl  world2moe_fragment.hlsl
out_bin/shaders/meshmodrender/: copycolour_fragment.hlsl  posnormal_vertex.hlsl
